--- a/style/styleIndex.css
+++ b/style/styleIndex.css
@@ -9,60 +9,63 @@ and open the template in the editor.
 */
 /* Цвета
 --------------------------------------------------------------------------------------------------------------- */
-body{color:#A8A7A6; background-color:gray;}
+@font-face {
+ font-family: "geometric";
+ src: url(geometric.otf);
+       
+}
+*{margin: 0;padding: 0;font-family: 'geometric';box-sizing: border-box;}
+body{color:#A8A7A6; background-color:#51495F;}
 a{color:#15AD72;text-decoration: none;}
 a:active, a:focus{background:transparent;text-decoration: none;}
-
-.row1{border-bottom:1px solid;font-size:22px; }
-.row1{color:#FFFFFF; background-color:rgba(27,32,38,.3);border-color:rgba(255,255,255,.1);}
+.row0{position: relative;}
+.row1{border-bottom:1px solid;font-size:30px; }
+.row1{color:#FFFFFF; background-color:#301C53;border-color:rgba(255,255,255,.1);}
 
 /* Навигация
 --------------------------------------------------------------------------------------------------------------- */
-header{ font-size:22px;}
-nav ul{margin:0; padding:0; list-style:none;}
-
+header{ font-size:30px;}
+nav{text-align:  center;}
+nav ul{ margin:0; padding:0; list-style:none;}
 #mainav ul{text-transform:uppercase;}
-#mainav ul ul{z-index:9999; position:absolute; width:180px; text-transform:none;}
-#mainav ul ul{visibility:hidden; opacity:0;}
-#mainav ul li:hover > ul{visibility:visible; opacity:1;}
-#mainav li{display:inline-block; position:relative; margin:0 15px 0 0; padding:0;}
-
-#mainav li:last-child{margin-right:0;}
-#mainav li a{display:block; padding:15px 0;}
-#mainav li a{color:inherit;}
+#mainav ul ul{z-index:9999;visibility:hidden; position:absolute;  text-transform:none;}
+#mainav ul li:first-child{margin:  0;}
+#mainav ul li:hover > ul{visibility:visible; }
+#mainav li{display:inline-block; position:relative; margin:0 15px 0 0;}
+#mainav li a{color:inherit; padding:15px 0;}
 #mainav .drop{padding-left:15px;}
 #mainav li li{width:100%; margin:0;}
 #mainav li li a, #mainav li li .drop{display:block; margin:0; padding:10px 15px;}
 #mainav li li a, #mainav .active li a{color:#FFFFFF; background-color:rgba(27,32,38,.3); border-color:rgba(0,0,0,.6); }
 #mainav li li a{border:solid; border-width:0 0 1px 0;}
-#mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:red;}
-#mainav .active a, #mainav a:hover, #mainav li:hover > a{color:red; background-color:inherit;}
-#mainav form select{color:#FFFFFF; background-color:red; border-color:rgba(255,255,255,.2);}
-
-
+#mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:#A292BF;}
+#mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#A292BF; background-color:inherit;}
+#mainav form select{color:#FFFFFF; background-color:#A292BF; border-color:rgba(255,255,255,.2);}
 #but{  
-
+    padding: 5px;
     position:absolute;
-    top: 60%;
+    bottom: 10%;
     left: 50%;
     transform:translate(-50%,0) ;
-    height: 30px;
-    background-color: red;
+    
+    background-color: #301C53;
     border-color: lightgrey;
     border-style: initial;
     border-radius: 7px; 
-    color: #FFFFFF;
+    color: #A292BF;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 30px;
     font-style: initial;
 
 }
+
 #logo{
     position:absolute;
     left: 50%;
-    transform:translate(-50%,-80%) ;
-    color: red;
+    transform:translate(-50%,0%) ;
+    color: #A292BF;
     font-weight: bold;
-    font-size: 60px;
-    font-style: initial;
+    font-size: 55px;
+    text-transform:uppercase;
+    text-shadow: 2px 2px 10px rgb(50,50,50), -2px -2px 10px gray ;
 }
