--- a/style/styleIndex.css
+++ b/style/styleIndex.css
@@ -14,9 +14,16 @@ and open the template in the editor.
 }
 
 *{margin: 0;padding: 0;font-family: 'cricket';box-sizing: border-box;}
-body{ background:linear-gradient(to top, #cccccc 50%, #6d6d6a 50%);position: relative; min-height: 100vh;}
+body{ background: url(../Img/fon.png)no-repeat center center fixed;
+       -webkit-background-size: 100% auto;
+        -moz-background-size: 100% auto;
+        -o-background-size: 100% auto;
+     background-size: 100% auto;
+     position: relative;
+     min-height: 100vh;}
 a{color:#FFFFFF;text-decoration: none;}
-a:active, a:focus{background:transparent;text-decoration: none;}.row0{position: relative;}
+a:active, a:focus{background:transparent;text-decoration: none;}
+.row0{position: relative; height: auto;}
 /*
 .row1{border-bottom:1px solid;font-size:30px; }
 .row1{color:#FFFFFF; background-color:#301C53;border-color:rgba(255,255,255,.1);}
@@ -28,6 +35,9 @@ header{ font-size:30px;}*/
 nav{z-index: 9999;text-align:  center;}
 nav ul{ margin:0; padding:0; list-style:none;}
 #mainav{ 
+    padding: 2px;
+    padding-left: 7px;
+    background-color:gray;
     font-size: 25px;
     position: fixed; 
     top: 0;left: 50%; 
@@ -35,11 +45,11 @@ nav ul{ margin:0; padding:0; list-style:none;}
     border-width :3px;border-style: solid;
     border-color:#FFFFFF;
 }
-#mainav ul{text-transform:uppercase;background-color:gray;}
+#mainav ul{ text-transform:uppercase;}
 #mainav ul ul{z-index:9999;visibility:hidden; position:absolute;  text-transform:none;}
-#mainav ul li:first-child{margin:  0;}
+
 #mainav ul li:hover > ul{visibility:visible; }
-#mainav li{display:inline-block; position:relative; margin:0 15px 0 0;}
+#mainav li{  display:inline-block; position:relative; margin:0 5px 0 0;}
 #mainav li a{color:#FFFFFF; padding:15px 0;}
 #mainav .drop{padding-left:15px;}
 #mainav li li{width:100%; margin:0;}
@@ -96,18 +106,18 @@ footer p{
 }
 
 #main-div{
-    background: url(../Img/fon.png)no-repeat center center fixed;
-        -webkit-background-size: 100% auto;
-        -moz-background-size: 100% auto;
-        -o-background-size: 100% auto;
-     background-size: 100% auto;
+   
+        position: relative;
     align-content: center;
      width: 100%;
 }
 #main-content{
-    word-break: break-all;
-    hyphens: manual;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    /*hyphens: manual;*/
     width: 50%;
+    
     position: relative;
     left: 25%;
     font-family: 'cricket';
@@ -119,7 +129,7 @@ footer p{
     text-align: center;
     font-family: 'cricket';
     font-size: 30px;
-    color: black;
+    color: red;
 }
 
 #contacts{
@@ -130,4 +140,50 @@ footer p{
 #contacts p{
     margin-bottom: 10px;
     margin-top: 20px;
+}
+
+.service{
+    margin-top: 10px;
+    margin-bottom: 15px;
+    border-width: 6px;
+    border-color: rgba(58, 58, 58, 0.23);;
+    border-style: double;
+    border-radius: 4px; 
+    background-color: rgba(148,148,148,0.7);
+    width: 100%;
+    padding: 5px;
+}
+.descriptionofservice{
+
+}
+.service img{
+    margin-right: 5px;
+    margin-bottom: 5px;
+    float: left;
+    width: 50%;
+}
+.service h3{
+    margin-bottom: 5px;
+}
+.action{  
+    display: inline-table;
+    margin: 5%;
+    margin-bottom: 5px;
+    border-width: 6px;
+    border-color: rgba(58, 58, 58, 0.23);;
+    border-style: double;
+    border-radius: 4px; 
+    background-color: rgba(148,148,148,0.7);
+    width: 39%;
+    padding: 5px;
+}
+.action img{
+    margin-left:  5%;
+    margin-top:  10px;
+    
+    width: 90%;
+    
+}
+.action h4{
+    margin-bottom: 5px;
 }
