--- a/style/stylewin.css
+++ b/style/stylewin.css
@@ -59,7 +59,9 @@ and open the template in the editor.
     text-align: right;
 }
 label{
-    margin-bottom: 15px;
+    height: 30px;
+    margin-bottom: 22px;
+    margin-top: 12px;
     position: relative;
     left: 10px;
     color: red;
@@ -71,16 +73,22 @@ label{
     height: 30px;
     font-style: initial; 
 }
+.tfanderror{
+    
+    height: 52px;
+    width: 100%;
+}
 .tf{
     
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+       margin-top: 14px;
     position: relative;
    width: 100%;
     padding: 5px;
     height: 30px;
     background-color: #FFFFFF;
-    border-color: red;
-    border-style: initial;
+    border: 2px solid #ccccff;
+    
     border-radius: 7px;  
     color: red;
     font-family: 'cricket';
@@ -89,6 +97,20 @@ label{
     font-style: initial; 
 }
 
+.error{
+    font-size: 12px;
+    height: auto;
+    margin:0px 15px 0px 0px;
+    padding: 0px;
+    display: none;
+}
+.error_input{
+    
+    border: 2px solid #FF0000; 
+    margin-top: 2px;
+    margin-bottom: 8px;
+    border-radius: 7px;  
+}
 
 #close {
     padding: 5px;
