--- a/style/stylewin.css
+++ b/style/stylewin.css
@@ -89,7 +89,6 @@ label{
     height: 30px;
     background-color: #FFFFFF;
     border: 2px solid #ccccff;
-    
     border-radius: 7px;  
     color: red;
     font-family: 'cricket';
@@ -97,7 +96,23 @@ label{
     font-size: 20px;
     font-style: initial; 
 }
-
+#imgFile{
+    
+    margin-bottom: 10px;
+    margin-top: 14px;
+    position: relative;
+    width: 100%;
+    padding: 3px;
+    height: 30px;
+    background-color: #FFFFFF;
+    border: 2px solid #ccccff;
+    border-radius: 7px;  
+    color: red;
+    font-family: 'cricket';
+    font-weight: bold;
+    font-size: 15px;
+    font-style: initial; 
+}
 .error{
     font-size: 12px;
     height: auto;
